[gd_scene load_steps=37 format=3 uid="uid://cjypwkc5cje34"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_cxcq2"]
[ext_resource type="Texture2D" uid="uid://dltaxv525wxed" path="res://Assets/Robot_Base_Render.png" id="2_om8qa"]
[ext_resource type="AudioStream" uid="uid://dn3jy3omvh7ui" path="res://Audio/9mm-pistol-shoot-short-reverb-7152.mp3" id="4_0mvi2"]
[ext_resource type="Script" path="res://Scripts/Firerate.gd" id="4_pc0wk"]
[ext_resource type="AudioStream" uid="uid://3r16fys4k201" path="res://Audio/load-gun-sound-effect-5-11003.mp3" id="5_66nv6"]
[ext_resource type="AudioStream" uid="uid://de1umywgfeefo" path="res://Audio/click-button-140881.mp3" id="6_isrmr"]
[ext_resource type="Script" path="res://Scripts/PlayerAnim.gd" id="6_ksm2e"]
[ext_resource type="AudioStream" uid="uid://dmjp78e4fxuhw" path="res://Audio/pistol-cock-6014.mp3" id="9_pk1p2"]
[ext_resource type="AudioStream" uid="uid://c7p4o1cmllkvy" path="res://Audio/9mm-pistol-shot-6349.mp3" id="10_hgiin"]
[ext_resource type="AudioStream" uid="uid://c71jkj6qpoi7y" path="res://Audio/male_hurt7-48124.mp3" id="13_xeadr"]
[ext_resource type="AudioStream" uid="uid://dk3xcb0ry3j7j" path="res://Audio/flamecharge.mp3" id="16_jatk1"]
[ext_resource type="AudioStream" uid="uid://ee1j8asctyjt" path="res://Audio/superslash.mp3" id="17_frtah"]
[ext_resource type="AudioStream" uid="uid://bxvmq2xsqkoeq" path="res://Audio/estusflask.mp3" id="18_2p3kv"]
[ext_resource type="AudioStream" uid="uid://clx5bs6rty6i0" path="res://Audio/swinging.mp3" id="18_6wr1e"]
[ext_resource type="AudioStream" uid="uid://cly8k8r5wpmdi" path="res://Audio/sci-fi-charge-up-37395.mp3" id="20_ayeyf"]
[ext_resource type="AudioStream" uid="uid://c8ud4p0jljfdc" path="res://Audio/shieldbreak.mp3" id="20_rx6ps"]
[ext_resource type="Script" path="res://Scripts/MeleeHitbox.gd" id="21_eey8p"]
[ext_resource type="AudioStream" uid="uid://t86xb17lgkwa" path="res://Audio/shieldsfull.mp3" id="21_sglvs"]
[ext_resource type="AudioStream" uid="uid://c0r65qh3hkj0p" path="res://Audio/thunder.mp3" id="29_c33vq"]
[ext_resource type="AudioStream" uid="uid://drbw0yucqj0h7" path="res://Audio/warp.mp3" id="34_1pqxu"]
[ext_resource type="AudioStream" uid="uid://cy36mh2qcehf2" path="res://Audio/laser-gun-81720 (1).mp3" id="37_51ocl"]
[ext_resource type="AudioStream" uid="uid://cg8emai4bcp24" path="res://Audio/Gunfire/ATsniper-rifle-5989.mp3" id="38_wuea5"]
[ext_resource type="PackedScene" uid="uid://iqancc5aa0r7" path="res://Scenes/pause_menu.tscn" id="39_2toct"]
[ext_resource type="AudioStream" uid="uid://deadlq64k5oko" path="res://Audio/Gunfire/cannon-shot-14799.mp3" id="39_vmoh4"]
[ext_resource type="AudioStream" uid="uid://di4v5pulqw3b7" path="res://Audio/Gunfire/doom-shotgun-2017-80549.mp3" id="40_bu5we"]
[ext_resource type="AudioStream" uid="uid://8xeex6wi005q" path="res://Audio/Gunfire/electric-impact-37128.mp3" id="41_6xi1r"]
[ext_resource type="AudioStream" uid="uid://bmdg5g5cmvafr" path="res://Audio/Gunfire/photonsci-fi-cannon-firing-whoosh-after-fire-low-pitch-slight-reverb-204400.mp3" id="42_kp0av"]
[ext_resource type="AudioStream" uid="uid://dt5md681sy5nn" path="res://Audio/Gunfire/semautoshotgun-firing-3-14483.mp3" id="43_tlygf"]
[ext_resource type="AudioStream" uid="uid://d01v7fxvu2i8q" path="res://Audio/Gunfire/silenced-gunshot-81063.mp3" id="44_ldwe6"]
[ext_resource type="AudioStream" uid="uid://dbc2ppco03fh2" path="res://Audio/Gunfire/sniper-rifle-firing-shot-1-39789 (1).mp3" id="45_x5j1l"]
[ext_resource type="AudioStream" uid="uid://cp1mslqrk5d7v" path="res://Audio/Gunfire/voidexplosion-36210.mp3" id="46_nwjo5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_lvhpo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_om8qa")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_om8qa")
}],
"loop": true,
"name": &"walk",
"speed": 18.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_e1tjd"]
radius = 11.0454

[sub_resource type="CircleShape2D" id="CircleShape2D_2ca2w"]
radius = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j3pda"]
size = Vector2(33.5, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_ca4x7"]
radius = 13.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_cxcq2")

[node name="PlayerAnim" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-2, 1)
rotation = -1.559
scale = Vector2(0.083179, 0.108532)
sprite_frames = SubResource("SpriteFrames_lvhpo")
animation = &"walk"
script = ExtResource("6_ksm2e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_e1tjd")

[node name="Firerate" type="Timer" parent="."]
wait_time = 0.05
script = ExtResource("4_pc0wk")

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2(30, 7)
rotation = 1.5708

[node name="Reload" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Audio" type="Node2D" parent="."]

[node name="Gunfire" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("4_0mvi2")
volume_db = -10.0
pitch_scale = 0.77

[node name="ReloadSFX" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("5_66nv6")
volume_db = 7.473

[node name="Click" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("6_isrmr")
volume_db = -8.502
pitch_scale = 1.79
attenuation = 59.7142
panning_strength = 0.81

[node name="WeaponSwitch" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("9_pk1p2")
volume_db = 0.045
pitch_scale = 0.91

[node name="SecondGunfire" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("10_hgiin")
volume_db = -10.0
pitch_scale = 1.96

[node name="Hit" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("13_xeadr")
pitch_scale = 0.74

[node name="FlameBuff" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("16_jatk1")

[node name="SuperSlash" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("17_frtah")

[node name="Swinging" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("18_6wr1e")
pitch_scale = 1.57

[node name="Drink" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("18_2p3kv")

[node name="ShieldBreak" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("20_rx6ps")

[node name="ShieldCharge" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("20_ayeyf")

[node name="ShieldsFull" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("21_sglvs")
volume_db = -6.0

[node name="Thunder" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("29_c33vq")
volume_db = 3.133
pitch_scale = 1.84

[node name="Warp" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("34_1pqxu")
pitch_scale = 1.36

[node name="Gunshots" type="Node2D" parent="Audio"]

[node name="Laser" type="AudioStreamPlayer2D" parent="Audio/Gunshots"]
stream = ExtResource("37_51ocl")

[node name="AT" type="AudioStreamPlayer2D" parent="Audio/Gunshots"]
stream = ExtResource("38_wuea5")

[node name="MG" type="AudioStreamPlayer2D" parent="Audio/Gunshots"]
stream = ExtResource("4_0mvi2")
volume_db = -4.953
pitch_scale = 0.61

[node name="RPG" type="AudioStreamPlayer2D" parent="Audio/Gunshots"]
stream = ExtResource("39_vmoh4")

[node name="Shotgun" type="AudioStreamPlayer2D" parent="Audio/Gunshots"]
stream = ExtResource("40_bu5we")

[node name="Shock" type="AudioStreamPlayer2D" parent="Audio/Gunshots"]
stream = ExtResource("41_6xi1r")

[node name="Photon" type="AudioStreamPlayer2D" parent="Audio/Gunshots"]
stream = ExtResource("42_kp0av")
volume_db = 10.731
pitch_scale = 1.69

[node name="SemAutoShot" type="AudioStreamPlayer2D" parent="Audio/Gunshots"]
stream = ExtResource("43_tlygf")

[node name="Silenced" type="AudioStreamPlayer2D" parent="Audio/Gunshots"]
stream = ExtResource("44_ldwe6")

[node name="Sniper" type="AudioStreamPlayer2D" parent="Audio/Gunshots"]
stream = ExtResource("45_x5j1l")

[node name="Void" type="AudioStreamPlayer2D" parent="Audio/Gunshots"]
stream = ExtResource("46_nwjo5")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_2ca2w")

[node name="MeleeHitbox" type="Area2D" parent="."]
position = Vector2(6, 0)
script = ExtResource("21_eey8p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeHitbox"]
position = Vector2(0.75, 7.8831e-06)
rotation = 1.05108e-05
shape = SubResource("RectangleShape2D_j3pda")

[node name="ActionableFinder" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionableFinder"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_ca4x7")

[node name="PauseMenu" parent="." instance=ExtResource("39_2toct")]
process_mode = 3
visible = false

[connection signal="timeout" from="Firerate" to="." method="_on_firerate_timeout"]
[connection signal="timeout" from="Reload" to="." method="_on_reload_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="MeleeHitbox" to="MeleeHitbox" method="_on_body_entered"]
